external-crates/move/crates/move-compiler/tests/move_check/typing/bad_type_argument_arity_const.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC03008]: too few type arguments
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:6:15
  │
6 │     const S1: S = S { f: 0 };
  │               ^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[EC04012]: invalid type for constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:6:15
  │
6 │     const S1: S = S { f: 0 };
  │               ^
  │               │
  │               Unpermitted constant type
  │               Found: '0x42::M::S<_>'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'bool', 'address', 'vector<_>'

error[EC04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:6:19
  │
6 │     const S1: S = S { f: 0 };
  │                   ^^^^^^^^^^ Structs are not supported in constants

error[EC03008]: too few type arguments
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:7:15
  │
7 │     const S2: S<> = S { f: 0 };
  │               ^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 0

error[EC04012]: invalid type for constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:7:15
  │
7 │     const S2: S<> = S { f: 0 };
  │               ^^^
  │               │
  │               Unpermitted constant type
  │               Found: '0x42::M::S<_>'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'bool', 'address', 'vector<_>'

error[EC04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:7:21
  │
7 │     const S2: S<> = S { f: 0 };
  │                     ^^^^^^^^^^ Structs are not supported in constants

error[EC03007]: too many type arguments
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:8:15
  │
8 │     const S3: S<u64, bool> = S { f: 0 };
  │               ^^^^^^^^^^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 2

error[EC04012]: invalid type for constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:8:15
  │
8 │     const S3: S<u64, bool> = S { f: 0 };
  │               ^^^^^^^^^^^^
  │               │
  │               Unpermitted constant type
  │               Found: '0x42::M::S<_>'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'bool', 'address', 'vector<_>'

error[EC04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:8:30
  │
8 │     const S3: S<u64, bool> = S { f: 0 };
  │                              ^^^^^^^^^^ Structs are not supported in constants

error[EC04012]: invalid type for constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:9:15
  │
9 │     const S4: S<S<u64, bool>> = S { f: S { f: 0 } };
  │               ^^^^^^^^^^^^^^^
  │               │
  │               Unpermitted constant type
  │               Found: '0x42::M::S<_>'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'bool', 'address', 'vector<_>'

error[EC03007]: too many type arguments
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:9:17
  │
9 │     const S4: S<S<u64, bool>> = S { f: S { f: 0 } };
  │                 ^^^^^^^^^^^^ Invalid instantiation of '0x42::M::S'. Expected 1 type argument(s) but got 2

error[EC04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:9:33
  │
9 │     const S4: S<S<u64, bool>> = S { f: S { f: 0 } };
  │                                 ^^^^^^^^^^^^^^^^^^^ Structs are not supported in constants

error[EC04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/bad_type_argument_arity_const.move:9:40
  │
9 │     const S4: S<S<u64, bool>> = S { f: S { f: 0 } };
  │                                        ^^^^^^^^^^ Structs are not supported in constants
